--- a/KLS_WEB/KLS_WEB/Views/Demand/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Demand/Index.cshtml
@@ -110,7 +110,7 @@
                     <div class="row mt-3">
                         <div class="col-5">
                             <label for="edittipounidad" class="form-label size-12 font-weight-bold float-left">TIPO DE SERVICIO</label>
-                            <select class="form-control form-control-sm tipounidad" style="width: 100%;" id="addedittipounidad" name="unitid">
+                            <select class="form-control form-control-sm tipounidad" style="width: 100%;" id="addedittipounidad" name="travelserviceid">
                                 <option value="0" selected disabled>SELECCIONA</option>
                             </select>
                         </div>
@@ -669,6 +669,15 @@
                 dToast("error", "Error al obtener los tipos de unidad", "Atencion!");
             });
 
+            //$.get("/Catalogs/TypesOfUnits/getUnidades", response => {
+            //    response.map(({ id, nombre, estatus }) => estatus === 1 && $(".tipounidad").append(`<option value="${id}">${nombre}</option>`));
+            //    dSelect('tipounidad');
+            //    dSelect('addedittipounidad');
+            //}).fail(error => {
+            //    console.error(error);
+            //    dToast("error", "Error al obtener los tipos de unidad", "Atencion!");
+            //});
+
             $.get("/Catalogs/Geography/State/getState", response => {
                 response.map(({ id, nombre, estatus }) => estatus === 1 && $(".estado").append(`<option value="${id}">${nombre}</option>`));
                 dSelect('addestadoo');
@@ -813,7 +822,6 @@
         }
 
         const selectCarrier = (DemandId, ClientId, UnitId, OriginId, DestinationId) => {
-            debugger
             $('#modaltransportista').modal('show');
             $('.carrierinfo').empty();
             $.post('/Demand/GetCarrier', { OriginId: OriginId, UnitId: UnitId }, response => {
@@ -976,7 +984,7 @@
                                     edit
                                 </span>
                             </a>
-                            <a href="/Demand/SetTravel/${id}" onclick="create(${id});">
+                            <a href="/Travels/ConvertTravel/${id}?type=demand">
                                 <span class="material-icons">
                                     local_shipping
                                 </span>
