--- a/KLS_WEB/KLS_WEB/wwwroot/css/login.css
+++ b/KLS_WEB/KLS_WEB/wwwroot/css/login.css
@@ -14,6 +14,6 @@
     padding: 0 65px;
 }
 .bg-image {
-    background-image: url('../img/KLSfondo.jpg');
+    background-image: url('../img/fondoklsnet.png');
     background-size: cover;
 }
