--- a/KLS_WEB/KLS_WEB/Views/Monitoring/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Monitoring/Index.cshtml
@@ -125,7 +125,7 @@
                         <div class="col-md-6">
                             <label>Sub Estatus</label>
                             <select class="form-control form-control-sm" style="width: 200px;" name="substatusId" id="subestatusModal">
-                                <option value="value">Selecciona una opción</option>
+                                <option value="0">Selecciona una opción</option>
                             </select>
                         </div>
                     </div>
@@ -140,7 +140,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <label>Evidencia</label>
-                            <input type="file" class="form-control" name="FileArchivo" id="FileArchivo" />
+                            <input type="file" class="form-control" name="FileArchivo" id="FileArchivo" accept=".jpg,.png" required="required"/>
                         </div>
                     </div>
                     <br />
@@ -279,25 +279,28 @@
             //frmComentario
             $("#frmComentario").submit(function (event) {
                 event.preventDefault();
-                var jsonData = convertJson($("#frmComentario"));
-                var formData = new FormData(document.getElementById("frmComentario"));
-                formData.append('file', $('#FileArchivo')[0].files[0]);
-                $.ajax({
-                    url: "/Monitoring/setCommentario",
-                    type: "POST",
-                    data: formData,
-                    contentType: false,
-                    processData: false,
-                    success: function (data) {
-                        dToast("success", "Registro actualizado exitosamente.", "Actualizado");
-                        location.reload();
-                        console.log( data );
-                    },
-                    error: function (data) {
-                        dToast("error", "Ocurrio un error al intentar guardar el archivo.", "Error");
-                    }
-                });
-
+                if ($("#subestatusModal").val() != 0) {
+                    var jsonData = convertJson($("#frmComentario"));
+                    var formData = new FormData(document.getElementById("frmComentario"));
+                    formData.append('file', $('#FileArchivo')[0].files[0]);
+                    $.ajax({
+                        url: "/Monitoring/setCommentario",
+                        type: "POST",
+                        data: formData,
+                        contentType: false,
+                        processData: false,
+                        success: function (data) {
+                            dToast("success", "Registro actualizado exitosamente.", "Actualizado");
+                            location.reload();
+                            console.log(data);
+                        },
+                        error: function (data) {
+                            dToast("error", "Ocurrio un error al intentar guardar el archivo.", "Error");
+                        }
+                    });
+                } else {
+                    dToast("error", "Todos los campos son necesarios.", "Atención");
+                }
             });
         });
 
@@ -357,6 +360,7 @@
                 });
             }).fail(function (error) {
                 console.log("Error al tratar de obtener los registros");
+                dToast("error", "No se encontro cliente.", "Atención");
             });
         }
 
