--- a/KLS_WEB/KLS_WEB/Views/Travels/AddEdit.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/AddEdit.cshtml
@@ -534,7 +534,7 @@
                 const response = await fetch(`/Travels/GetClientReferences?ClientId=${ClientId}`);
                 const data = await response.json();
                 if (!data) {
-                    dToast("warning", 'El cliente seleccionado no tiene parámetros para "OTROS".', "Atencion!");
+                    //dToast("warning", 'El cliente seleccionado no tiene parámetros para "OTROS".', "Atencion!");
                     $('#referencia1, #referencia2, #referencia3').hide();
                     $('#Section_Referencia1, #Section_Referencia2, #Section_Referencia3').prop('disabled', true);
                     return;
