*carga masiva demand bugfix

--- a/KLS_WEB/KLS_WEB/Views/Travels/_Section.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/_Section.cshtml
@@ -104,6 +104,7 @@
             <label asp-for="Section.RutaId" class="form-label">RUTA</label>
             <select asp-for="Section.RutaId" asp-items="Model.Selects.Routes" class="form-select" style="width: 100%;"></select>
         </div>
+        <div class="col-6"></div>
         @*<div class="col-6">
             <label asp-for="Section.SectionTypeId" class="form-label">TIPO DE TRAMO</label>
             <select asp-for="Section.SectionTypeId" asp-items="Model.Selects.SectionType" class="form-select" style="width: 100%;"></select>
