--- a/KLS_WEB/KLS_WEB/Views/Travels/_Monitoreo.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/_Monitoreo.cshtml
@@ -56,7 +56,7 @@
                                         }
                                     </div>
                                     <div class="col-md-10 text-left">
-                                        <p>@comment.Comment @comment.CreatedBy @comment.TimeCreated</p>
+                                        <p>@comment.Comment</p>
                                     </div>
                                 </div>
                             </div>
@@ -109,7 +109,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <label>Evidencia</label>
-                            <input type="file" class="form-control" name="FileArchivo" id="FileArchivo" accept=".jpg,.png"/>
+                            <input type="file" class="form-control" name="FileArchivo" id="FileArchivo" accept=".jpg,.png" required="required"/>
                         </div>
                     </div>
                     <br />
@@ -129,11 +129,18 @@
 <div class="modal fade" id="checkpointModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">CHECKPOINTS</h5>
+            <div class="modal-header d-block">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
+                <div class="row">
+                    <div class="col-md-6">
+                        <h5 class="modal-title" id="exampleModalLabel">CHECKPOINTS</h5>
+                    </div>
+                    <div class="col-md-6">
+                        <h5 class="modal-title" id="exampleModalLabel">@Model.FechaSalida.ToString("yyyy-MM-dd HH:mm:ss tt")</h5>
+                    </div>
+                </div>
             </div>
             <div class="modal-body">
                 <div class="row">
@@ -254,18 +261,19 @@
                 var colorCheck = "green";
                 //Recorrer catalogo catSecChecpoints
                 $.each(catCheckpoints, function (item, key) {
+                    console.log(key);
                     i++;
                     horaOriginal = horaOriginal + key.tiempo;
                     horaOriginal1 = horaOriginal1 + key.tiempo;
 
-                    fechaSalidaView = moment(fechasalida).add(horaOriginal, 'hours').format('YYYY-MM-DD hh:mm:ss'); //Siempre va
+                    fechaSalidaView = moment(fechasalida).add(horaOriginal, 'hours').format('YYYY-MM-DD hh:mm:ss A'); //Siempre va
                     var hReal, createdBy, btnActive, hEsperada = ``;
                     let indice = catSecChecpoints.findIndex(service => service.idCheckpoint == key.id);
 
                     if (indice >= 0) {
                         banderaHoraEsperada = 1;
                         //Aqui ya tenemos una hora real
-                        hReal = `<td>${moment(catSecChecpoints[indice].horaReal).format('YYYY-MM-DD hh:mm:ss')}</td>`;
+                        hReal = `<td>${moment(catSecChecpoints[indice].horaReal).format('YYYY-MM-DD hh:mm:ss A')}</td>`;
                         createdBy = `<td>${catSecChecpoints[indice].createdBy}</td>`;
                         btnActive = `<td><button class="btn btn-sm" disabled="disabled"><span class="material-icons">save</span></button></td>`;
                         horaOriginal1 = 0;
@@ -281,10 +289,10 @@
                     }
 
                     if (parseInt(i) <= 1) {
-                        hEsperada = `<td>${moment(fechasalida).add(horaOriginal, 'hours').format('YYYY-MM-DD hh:mm:ss')}</td>`;
+                        hEsperada = `<td>${moment(fechasalida).add(horaOriginal, 'hours').format('YYYY-MM-DD hh:mm:ss A')}</td>`;
                     } else {
                         if (banderaHoraEsperada == 0) {
-                            hEsperada = `<td>${moment(fechasalida).add(horaOriginal1, 'hours').format('YYYY-MM-DD hh:mm:ss')}</td>`;
+                            hEsperada = `<td>${moment(fechasalida).add(horaOriginal1, 'hours').format('YYYY-MM-DD hh:mm:ss A')}</td>`;
                         } else {
                             if (horaOriginal1 == 0) {
                                 let horadif = moment(horaEsperadaView1).diff(fechaSalidaView, 'minutes');
@@ -294,8 +302,8 @@
                                     colorCheck = "red";
                                 }
 
-                                let fecha = moment(fechaSalidaView).add(horadif, 'minutes').format('YYYY-MM-DD hh:mm:ss')
-                                hEsperada = `<td>${moment(fecha).add(key.tiempo, 'hours').format('YYYY-MM-DD hh:mm:ss')}</td>`;
+                                let fecha = moment(fechaSalidaView).add(horadif, 'minutes').format('YYYY-MM-DD hh:mm:ss A')
+                                hEsperada = `<td>${moment(fecha).add(key.tiempo, 'hours').format('YYYY-MM-DD hh:mm:ss A')}</td>`;
                             } else {
                                 let horadif = moment(horaEsperadaView).diff(fechaSalidaView, 'minutes');
                                 horadif = horadif * 1;
@@ -304,14 +312,14 @@
                                     colorCheck = "red";
                                 }
 
-                                let fecha = moment(fechaSalidaView).add(horadif, 'minutes').format('YYYY-MM-DD hh:mm:ss')
-                                hEsperada = `<td>${moment(fecha).add(horaOriginal1, 'hours').format('YYYY-MM-DD hh:mm:ss')}</td>`;
+                                let fecha = moment(fechaSalidaView).add(horadif, 'minutes').format('YYYY-MM-DD hh:mm:ss A')
+                                hEsperada = `<td>${moment(fecha).add(horaOriginal1, 'hours').format('YYYY-MM-DD hh:mm:ss A')}</td>`;
                             }
                         }
                     }
 
-                    trInfo += `<td> <div style="height:10px;width:10px;background:${colorCheck};-moz-border-radius:50px;-webkit-border-radius:50px;border-radius:50px;display: inline-block;"></div> ${key.checkpoint}</td>`;
-                    trInfo += `<td>${fechaSalidaView}</td>`;
+                    trInfo += `<td> <div style="height:10px;width:10px;background:${colorCheck};-moz-border-radius:50px;-webkit-border-radius:50px;border-radius:50px;display: inline-block;"></div> ${key.nombre}</td>`;
+                    trInfo += `<td>${moment(fechaSalidaView).format('YYYY-MM-DD hh:mm:ss A')}</td>`;
                     trInfo += hEsperada + hReal + createdBy + btnActive + `</tr>`;
 
                     //Fin pintar tabla
