*Remove unit layout bugfix

--- a/KLS_WEB/KLS_WEB/Views/Travels/AddEdit.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/AddEdit.cshtml
@@ -888,7 +888,9 @@
                     console.error(e);
                 }
             }
-            $(e).parent().parent().remove();
+            $(e).parent().parent().parent().remove();
+            console.log(e);
+            //$('.equipo').map((k, e) => $(e).remove());
         }
 
         const GetKLSRoutes = async RouteId => {
