--- a/KLS_WEB/KLS_WEB/Views/Offer/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Offer/Index.cshtml
@@ -90,7 +90,6 @@
                     </table>
                 </div>
             </div>
-
         </div>
     </div>
 </div>
@@ -221,22 +220,22 @@
             </div>
             <div class="modal-body">
                 <div class="row">
-                    <div class="col-md-8">
+                    <div class="col-md-12">
                         <label>Transportista</label>
                         <select class="form-control form-control-sm" id="idtransportista" style="width:100%;">
                             <option value="0">Selecciona una opción</option>
                         </select>
                     </div>
-                    <div class="col-md-4">
+                    @*<div class="col-md-4">
                         <label>Tipos de servicios</label>
                         <select class="form-control form-control-sm" id="tiposServicios" style="width:100%;">
                             <option value="0">Selecciona una opción</option>
                         </select>
-                    </div>
+                    </div>*@
                 </div>
                 <div class="row pt-2">
                     <div class="col-md-3">
-                        <label>Tipo de unidad</label>
+                        <label>Tipos de servicios</label>
                         <select class="form-control form-control-sm" style="width:100%;" id="idtipounidad">
                             <option value="0">Selecciona una opción</option>
                         </select>
@@ -374,7 +373,7 @@
             if (parseInt(idTransportista) != 0) {
                 var idTipounidad = $("#idtipounidad").val();
                 if (parseInt(idTipounidad) != 0) {
-                    if ($("#txtRangoEspera").val() != "" && $("#txtRangoEspera").val() != 0 && $("#tiposServicios").val() != "" && $("#tiposServicios").val() !=0 && $("#txtCantidad").val() != "" && $("#txtCantidad").val() != 0 && $("#txtCantidad").val() != null && $("#txtFechaDisponibilidad").val() != "" && $("#txtFechaDisponibilidad").val() != null) {
+                    if ($("#txtRangoEspera").val() != "" && $("#txtRangoEspera").val() != 0 && $("#idtipounidad").val() != "" && $("#idtipounidad").val() !=0 && $("#txtCantidad").val() != "" && $("#txtCantidad").val() != 0 && $("#txtCantidad").val() != null && $("#txtFechaDisponibilidad").val() != "" && $("#txtFechaDisponibilidad").val() != null) {
                         if ($("#txtNivelOrigen").val() != 0) {
                             if ($("#txtNivelDestino").val()!=0) {
                                 //Validaciones
@@ -462,7 +461,7 @@
                     $('#txtFechaDisponibilidad').val(res.fecha_Disponibilidad);
                     $('#txtRangoEspera').val(res.rango_De_Espera);
                     $('#txtNivelOrigen').val(cUpper(res.nivel_Origen)).trigger('change');
-                    $('#tiposServicios').val(cUpper(res.idServiceTypes)).trigger('change');
+                    //$('#tiposServicios').val(cUpper(res.idServiceTypes)).trigger('change');
 
                     if (cUpper(res.nivel_Origen) == "REGION") {
                         $('#seleccionaOrigen').val(parseInt(res.region_Origen)).trigger('change');
@@ -579,8 +578,8 @@
                             "estado_Destino": item[itemT[12]],
                             "ciudad_Destino": item[itemT[13]],
                             "Tolerancia_Destino": item[itemT[14]],
-                            "IdServiceTypes": item[itemT[15]],
-                            "status": item[itemT[16]],
+                            //"IdServiceTypes": item[itemT[15]],
+                            "status": item[itemT[15]],
                         },
                     );
                     var fecha = moment(item[itemT[3]]).format('YYYY-DD-MM hh:mm:ss A');
@@ -730,13 +729,10 @@
                     if (unidades >= 0) {//Se encontraron unidades
 
                         console.log(ServiceTypes);
-                        let tipoServiciocat = ServiceTypes.findIndex(service => cUpper(service.name).trim() == cUpper(key.IdServiceTypes).trim());
-
-                        if (tipoServiciocat >= 0) {
-
+                        //let tipoServiciocat = ServiceTypes.findIndex(service => cUpper(service.name).trim() == cUpper(key.IdServiceTypes).trim());
+                        //if (tipoServiciocat >= 0) {
                             idunidad = catUnidades[unidades].id;
-                            tipoServicio = ServiceTypes[tipoServiciocat].id;
-
+                            //tipoServicio = ServiceTypes[tipoServiciocat].id;
                             var Nivel_Origen = cUpper(key.Nivel_Origen);
                             if (Nivel_Origen != "REGION" && Nivel_Origen != "ESTADO" && Nivel_Origen != "CIUDAD") {
                                 //console.log("Esta region no pertenece  a ningun dato", Nivel_Origen); //<-----------------------------------------------------
@@ -765,10 +761,10 @@
                                 }
                                 if (Nivel_Origen == "CIUDAD") {
                                     estadoOrigen = catEstado.findIndex(es => cUpper(es.nombre) == cUpper(key.Estado_Origen));
-                                    ciudadOrigen = catCiudad.findIndex(ci => cUpper(ci.nombre) == cUpper(key.ciudad_Origen));
+                                    ciudadOrigen = catCiudad.findIndex(ci => cUpper(ci.nombre) == cUpper(key.ciudad_Origen).replace(/[^a-zA-Z ]/g, ""));
 
-                                    if (estadoOrigen < 0 && ciudadOrigen < 0) {
-                                        //console.log("No se encontro nada con ciudad origen", key.Transportista, key.ciudad_Origen);
+                                    if (estadoOrigen < 0 || ciudadOrigen < 0) {
+                                        console.log("No se encontro nada con ciudad origen 767", key.Transportista, key.ciudad_Origen);
                                         jsonEnvIncorrectos.push(key);
                                         return;
                                     } else {
@@ -781,14 +777,14 @@
                             //Nivel Destino <-----------------------------------------------------------------------------------
                             var Nivel_Destino = cUpper(key.Nivel_Destino);
                             if (Nivel_Destino != "REGION" && Nivel_Destino != "ESTADO" && Nivel_Destino != "CIUDAD") {
-                                //console.log("Esta region no pertenece  a ningun dato", Nivel_Destino);
+                                console.log("780", Nivel_Destino);
                                 jsonEnvIncorrectos.push(key);
                                 return;
                             } else {
                                 if (Nivel_Destino == "REGION") {
                                     regionDestino = catRegion.findIndex(r => cUpper(r.nombre) == cUpper(key.Region_Destino));
                                     if (regionDestino < 0) { //Si se encontro la region
-                                        //console.log("No se encontro region destino", key.Nivel_Destino);
+                                        console.log("linea 787", key.Nivel_Destino);
                                         jsonEnvIncorrectos.push(key);
                                         return;
                                     } else {
@@ -798,7 +794,7 @@
                                 if (Nivel_Destino == "ESTADO") { //Validar cuando la region es estado
                                     estadoDestino = catEstado.findIndex(es => cUpper(es.nombre) == cUpper(key.estado_Destino));
                                     if (estadoDestino < 0) {
-                                        //console.log("No se encontro ningun estado destinp", key.estado_Destino);
+                                        console.log("linea 797", key);
                                         jsonEnvIncorrectos.push(key);
                                         return;
                                     } else {
@@ -807,9 +803,10 @@
                                 }
                                 if (Nivel_Destino == "CIUDAD") {
                                     estadoDestino = catEstado.findIndex(es => cUpper(es.nombre) == cUpper(key.estado_Destino));
-                                    ciudadDestino = catCiudad.findIndex(ci => cUpper(ci.nombre) == cUpper(key.ciudad_Destino));
-                                    if (estadoDestino < 0 && ciudadDestino < 0) {
-                                        //console.log("No se encontro nada con ciudad destino");
+                                    ciudadDestino = catCiudad.findIndex(ci => cUpper(ci.nombre) == cUpper(quitarAcentos(key.ciudad_Destino)));
+  
+                                    if (estadoDestino < 0 || ciudadDestino < 0) {
+                                        console.log("No se encontro nada con ciudad destino", key);
                                         jsonEnvIncorrectos.push(key);
                                         return;
                                     } else {
@@ -819,12 +816,12 @@
                                 }
                             }
                         //---------------------------------------------
-                        } else {
-                            console.log("No se encontro tipo de unidad");
-                            console.log(key);
-                            jsonEnvIncorrectos.push(key);
-                            return;
-                        }
+                        //} else {
+                        //    console.log("No se encontro tipo de unidad");
+                        //    console.log(key);
+                        //    jsonEnvIncorrectos.push(key);
+                        //    return;
+                        //}
 
                     } else {//No se encontraron unidades
                         console.log("No se encontro unidad", key.Tipo_De_Unidad);
@@ -854,11 +851,10 @@
                         "estado_Destino": idestadoD,
                         "ciudad_Destino": idciudadD,
                         "Tolerancia_Destino": key.Tolerancia_Destino,
-                        "IdServiceTypes": tipoServicio,
+/*                        "IdServiceTypes": tipoServicio,*/
                         "status": key.status
                     }
                 );
-
             });
 
             if (Object.keys(jsonEnvIncorrectos).length > 0) {
@@ -882,9 +878,13 @@
             eGuardar();
         }
         //Excel<------------------------------------------------------------
-        function cUpper(texto) {
+        function cUpper(texto ="") {
             texto = texto.toUpperCase().trim().replace(/ /g, "");
             return texto;
+        }
+        function quitarAcentos(cadena) {
+            const acentos = { 'á': 'a', 'é': 'e', 'í': 'i', 'ó': 'o', 'ú': 'u', 'Á': 'A', 'É': 'E', 'Í': 'I', 'Ó': 'O', 'Ú': 'U' };
+            return cadena.split('').map(letra => acentos[letra] || letra).join('').toString();
         }
         function estado(estado) {
             estado = parseInt(estado);
